# fitness-app

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  GITHUB_ACTIONS_SETUP.md  HF_SPACE_SETUP.md  README.md  README_HF.md  SECURITY_UPDATE.md  WORKFLOW_STRATEGY.md  app.py  db.py  debug_imports.py  docker-compose.yml  evaluate_agent_mlflow.py  fitness_agent.py  fitness_assistant.py  init.sql  intake_form.py  memory.py  models.py  pyproject.toml  requirements.txt  run_agent_demo.py  setup-github-actions.ps1  setup-github-actions.sh  start.py  test_datetime.py  test_formatting.py
.github/: test_imports.py
.github/workflows/: deploy-to-hf-advanced.yml  deploy-to-hf.yml  deploy-to-huggingface.yml
app/: db.py  fitness_agent.py  memory.py  models.py
app/evals/: evaluate_agent_mlflow.py
apps/gradio-app/: README.md  VOICE_SETUP.md  manifest.json  pyproject.toml  requirements.txt  test_audio_debug.py  test_datetime.py  test_datetime_simple.py  test_tts.py  test_voice_conversation.py
apps/gradio-app/src/fitness_gradio/: __init__.py  main.py
apps/gradio-app/src/fitness_gradio/examples/: __init__.py  demo.py
apps/gradio-app/src/fitness_gradio/ui/: __init__.py  app.py  audio_utils.py  components.py  handlers.py  styles.py  tts_utils.py  voice_conversation.py
apps/gradio-app/src/fitness_gradio/ui/static/: voice_conversation.js
docs/: COMPLETE_MODEL_GUIDE.md  DEVELOPER_GUIDE.md  DEVELOPMENT.md  GROQ_INTEGRATION.md  MODELS.md  REPOSITORY_GUIDE.md  calculations_for_calories_and_macros.md
fitness_agent/: REPOSITORY_GUIDE.md  __init__.py  agents.py  app.py  examples.py  fitness_agent.py  fitness_agent_ui.py  gradio_ui.py  memory.py  models.py  pyproject.toml  services.py  test_openai_models.py  test_updated_models.py  tools.py  utils.py
gradio_app/: __init__.py  app.py
scripts/: run_gradio.py  setup.bat  setup.sh
shared/: README.md  pyproject.toml  requirements.txt
shared/src/fitness_core/: __init__.py
shared/src/fitness_core/agents/: __init__.py  base.py  fitness_agent.py  fitness_plan_agent.py  fitness_plan_model.py  fitness_plan_models.py  meal_plan_models.py  models.py  providers.py  structured_output_models.py  tools.py  training_plan_models.py  user_session.py
shared/src/fitness_core/services/: __init__.py  agent_runner.py  conversation.py  exceptions.py  fitness_agent_runner.py  formatters.py
shared/src/fitness_core/utils/: __init__.py  config.py  logging.py
src/: fitness_assistant.py  fitness_plan.py  user_profile.py
src/utils/: calculations.py
tests/: __init__.py  test_app.py
tests/test_agents/: test_base.py
