[tool.poetry]
name = "fitness-app"
version = "0.1.0"
description = ""
authors = ["Sean Deery <sdeery14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gradio = "^5.16.0"
openai = "^1.63.0"
python-dotenv = "^1.0.1"
ipykernel = "^6.29.5"
pytest = "^8.3.4"
chardet = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
