[tool.poetry]
name = "fitness-gradio-app"
version = "0.1.0"
description = "Gradio interface for fitness AI assistant"
authors = ["Sean Deery <sdeery14@gmail.com>"]
readme = "README.md"
packages = [{include = "fitness_gradio", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fitness-core = {path = "../../shared", develop = true}
gradio = "^5.38.1"
reportlab = "^4.4.3"
scipy = "^1.11.0"
groq = "^0.15.0"

[tool.poetry.scripts]
fitness-gradio = "fitness_gradio.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
